add user features